<resources>
    <string name="app_name">Jobrr</string>
    <string name="Mail">Mail</string>
    <string name="Password">Password</string>
    <string name="StrongIndication">Enter a strong password</string>
    <string name="minPass">Password is too short, enter a minimum of 8 characters</string>
    <string name="badPass">Weak password, include minimum 1 special character</string>
    <string name="loginBtn">Login</string>
    <string name="title_activity_registration">Registration</string>
    <string name="createAccount">Create Account</string>
    <string name="nationalNumber">National Registration Number</string>
    <string name="ContactName">Contact Name</string>
    <string name="contactNumber">Contact Number</string>
    <string name="contactAddress">Contact Mail Address</string>
    <string name="companyAddress">Company Address</string>
    <string name="CompanyLink">Website or Linkedin</string>
    <string name="companySub">Company Sub Service</string>
    <string name="companyService">Company Service</string>
    <string name="AddContactRegistrationAgency">Add Contact 2 or Service</string>
    <string name="companyName">Company Name</string>
    <string name="registrationTitle">Account creation</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="passwordMatching">Password match successfully</string>
    <string name="passwordMismatch">Password not corresponding</string>
    <string name="Name">Name</string>
    <string name="Firstname">Firstname</string>
    <string name="PhoneNumber">Phone number</string>
    <string name="Birthdate">Birthdate</string>
    <string name="ConfirmPassword">Confirm password</string>
    <string name="ChooseCV">Choose your CV</string>
    <string name="CreateAccount">Create your account</string>
    <string name="CityofSearch">Where do you want to work</string>
    <string name="profile">Profile page</string>
    <string name="profileIndication">Your Profile</string>
    <string name="mobileValidationText">To create a new account, you need to confirm your identity by entering the code received by SMS on your mobile phone. If you didn\'t receive the code, use the send new code button.</string>
    <string name="newCodeButton">Get code</string>
    <string name="validateButton">Confirm</string>
    <string name="mobileValidationInput">Enter Code</string>
    <string name="choosSubscription">Choose your plan</string>
    <string name="oneDaySub">One Day Subscription</string>
    <string name="oneMonthSub">Monthly Subscription</string>
    <string name="semestrialSub">Semestrial Subscription</string>
    <string name="trimestrialSub">Trimestrial Subscription</string>
    <string name="oneYearSub">Yearly Subscription</string>
    <string name="unlimitedSubscription">Unlimited Subscription</string>
    <string name="descriptionDailySub">Post offers for one day</string>
    <string name="descriptionMonthlySub">Post offers during a month</string>
    <string name="descriptionSemestrialSub">Post offers for 6 months</string>
    <string name="descriptionTrimestrialSub">Post offers for 3 months</string>
    <string name="descriptionYearlySub">Post offers for a year</string>
    <string name="descriptionUnlimitedSub">Post offers for an unlimited period of time</string>
    <string name="planOption1">Statistics visualization</string>
    <string name="planOption2">Top of the list</string>
    <string name="planOption3">Support Service 24/7</string>
    <string name="planOption4">"Automatic offer renewal "</string>
    <string name="planOption5">Unlimited active offers</string>
    <string name="deleteSubTimeout">Instant cancellation - Without Notice</string>
    <string name="choosePlanBtn">Choose Plan</string>
    <string name="paymentMethod">Payment Method : Credit Card only</string>
    <string name="monthlyLabelPrice">20$ /month</string>
    <string name="semestrialLabelPrice">100$ /semester</string>
    <string name="trimestrialLabelPrice">50$ /trimester</string>
    <string name="yearlyLabelPrice">190$ /year</string>
    <string name="oneTimeLabelPrice">1000$ / one time</string>
    <string name="dailyLabelPrice">10$ /day</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="creditCardName">Owner name</string>
    <string name="cardNumber">Enter Card Number</string>
    <string name="cardCVC">CVC</string>
    <string name="cardExpiration">Expiration</string>
    <string name="registerCardInformations">Remember this card</string>
    <string name="cardInformationsPage">Complete your card informations to continue</string>
    <string name="streetInputLabel">Street, Box ..</string>
    <string name="appartementInputLabel">Apt, Suite, Unit ...</string>
    <string name="countryInputLabel">Country</string>
    <string name="stateInputLabel">State/Province</string>
    <string name="postalCodeInput">Postal Code</string>
    <string name="defaultAddress">Set as default address</string>
    <string name="useAddressBtn">Use this address</string>
    <string name="missingFieldsErroToast">Missing fields, please verify informations</string>
    <string name="payBtn">Pay</string>
    <string name="addressInformationPage">Complete all the informations for the order address</string>
    <string name="orderSummaryPage">Time to pay ! Here is your basket</string>
    <string name="useThisCard">Use card</string>
    <string name="goRegister">Don\'t have an account ?</string>
    <string name="goRegisterCorp">Need PRO account ?</string>
    <string name="nextBtn">Next</string>
    <string name="prevBtn">Prev</string>
    <string name="firstSlideTitle">Create an account and choose a plan</string>
    <string name="secondSlideTitle">Place your order and start recruiting</string>
    <string name="thirdSlideTitle">Find and choose the best profile</string>
    <string name="firstSlideDescription">Find the best plan that suit your business and your strategy to recruit more qualified workers</string>
    <string name="secondSlideDescription">Start posting offers right after payment (All the functions are automatically activated)</string>
    <string name="thirdSlideDescription">All the tools needed to make a good appointment are included in every pack</string>
    <string name="startSlideBtn">Start</string>
    <string name="title_activity_slides" translatable="false">SlidesActivity</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="loginText">Hey, Welcome back !</string>
    <string name="resiliationTerms">No notice period required for termination during subscription</string>
    <string name="OTPSent">OTP code sent successfully</string>
    <string name="OTPError">Error occured sending code</string>
    <string name="phoneVerified">Phone number verified successfuly</string>
    <string name="wrongOTP">Wrong OTP, try again</string>
    <string name="createGroup">Create Group</string>
    <string name="modifyProfile">Modify Profile</string>
    <string name="conversationPageTitle">My Messages</string>
    <string name="exampleSearch">Manager, Barmaid ...</string>
    <string name="startDateFilter">Start Date</string>
    <string name="endDateFilter">End Date</string>
    <string name="areaFilter">Area :</string>
    <string name="startPriceFilter">Min Salary</string>
    <string name="endPriceFilter">Max Salary</string>
    <string name="searchBtn">Search</string>
    <string name="applyBtn">Apply</string>
    <string name="chooseCat">Choose category</string>
    <string name="paymentValidateAnimation">Congratulations ! Now let\'s make your dream team ! Click on Next to go to your Home Page</string>
    <string name="workCitation">\"Alone we can do so little; together we can do so much.\" – Helen Keller</string>
    <string name="fullNextBtn">Next</string>
    <string name="paymentValidateAnimationUser">Congratulations ! Now let\'s find your next mission ! Click on Next to go to your Home Page</string>
    <string name="savedOffersDisplay">" saved offers"</string>
    <string name="placeholderBarMessage">Type text ...</string>
    <string name="blockButton">Block User</string>
    <string name="signalBtn">Signal User</string>
    <string name="muteBtn">Mute</string>
    <string name="allowNotification">Activated</string>
    <string name="groupCreation">Group Creation</string>
    <string name="City">City</string>
    <string name="shareBtn">Share</string>
    <string name="seeProfile">Company</string>
    <string name="moreInfos">"More informations : "</string>
    <string name="moneyMonthIndicator">/ Months</string>
    <string name="dateIndicationsStart">From</string>
    <string name="dateIndicationsEnd">" to"</string>
    <string name="itinaryBtn">Get the itinary</string>
    <string name="findSimilar">Similar Offers</string>
    <string name="visitWebsite">Website</string>
    <string name="actionCall">What\'s next ?</string>
    <string name="applyActionCall">If you\'re interrrested, don\'t hesitate</string>
    <string name="profileModification">Profile Modification</string>
    <string name="saveModificationBtn">Save informations</string>
    <string name="secondContact">Contact 2</string>
    <string name="addPicBtn">Choose file</string>
    <string name="uploadBtn">Upload Photo</string>
    <string name="spontaneousApplyBtn">Spontaneous Application</string>
    <string name="moreInfosCallActionTitle">Need more infos, find more offers ?</string>
    <string name="findSimilarBtn">Similar Offers</string>
    <string name="contactCompanyBtn">Contact Company</string>
    <string name="postedDateSuffix">Post date :</string>
    <string name="jobrrFooter">Posted with Jobrr App</string>
    <string name="seeMore">See More</string>
    <string name="notificationCenterTitle">Notification Center</string>
    <string name="postOffersPageTitle">Post an offer</string>
    <string name="offerTitle">Offer Title</string>
    <string name="salaryPrice">Salary Per Month</string>
    <string name="placeInput">City or place</string>
    <string name="offerLink">Offer Link</string>
    <string name="postOffersDescription">Post offer description</string>
    <string name="postOfferDetails">Add offer details like hour shift ...</string>
    <string name="addOfferBtn">Add offer</string>
    <string name="searchFavorite">Search Through Favorites</string>
    <string name="generalInformations">General Informations</string>
    <string name="offerTags">Offer Keywords</string>
    <string name="labelTitle">Offer Labels</string>
    <string name="myApplicationsBtn">My Applications</string>
    <string name="searchApplications">Search Through applications</string>
    <string name="myApplicationsTitle">My Applications</string>
    <string name="connectionWarning">You must be connected to make this operation</string>
    <string name="shareofferTitle">I found an offer that might interest you</string>
    <string name="shareofferHook">Hey it\'s</string>
    <string name="shareOfferDetails">Offer details :</string>
    <string name="shareofferActionCall">To see more about this offer, or find similar offers, visit the Jobrr App ! See you soon ..</string>
    <string name="myResume">Upload My Resume</string>
    <string name="myCoverLetter">Upload a Cover Letter</string>
    <string name="resumeNotFound">Upload a resume</string>
    <string name="coverNotFound">Upload a cover letter</string>
    <string name="uploadResumeRegister">Add your Resume</string>
    <string name="uploadCoverRegister">Add your letter</string>
    <string name="uploadYourFiles">Upload your files</string>
</resources>