<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Name"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Firstname"
            android:inputType="text" />

                <Spinner
                    android:id="@+id/nationalitySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Nationality"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Mail"
            android:inputType="textEmailAddress" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/PhoneNumber"
            android:inputType="phone" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <EditText
            android:id="@+id/birthdateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Birthdate"
            android:inputType="date" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <AutoCompleteTextView
            android:id="@+id/cityAutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CityofSearch" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <EditText
            android:id="@+id/passwordConfirmationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ConfirmPassword"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <Button
            android:id="@+id/cvButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:onClick="onCVButtonClicked"
            android:text="@string/ChooseCV" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:onClick="onRegisterButtonClicked"
            android:text="@string/CreateAccount" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>
