<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    android:elevation="4dp"
    android:outlineProvider="none"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/personLogin"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/person" />

    <ImageView
        android:id="@+id/loginDeck"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/personLogin"
        app:srcCompat="@drawable/bottom" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/loginText"
        android:textAlignment="center"
        android:textColor="@color/primary_red"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/loginDeck"></TextView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutUser"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/Mail"
        app:boxBackgroundColor="#FFFFFF"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/primary_red"
        app:boxStrokeErrorColor="#DC0303"
        app:endIconMode="clear_text"
        app:endIconTint="@color/primary_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginText"
        app:placeholderText="abc@df.com"
        app:startIconDrawable="@drawable/baseline_person_24"
        app:startIconTint="@color/primary_red">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/Password"
        app:boxBackgroundColor="#FFFFFF"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/primary_red"
        app:counterEnabled="false"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/primary_red"
        app:errorEnabled="false"
        app:helperTextEnabled="false"
        app:helperTextTextColor="#009688"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutUser"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:startIconTint="@color/primary_red">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/gradient"
        android:text="@string/loginBtn"
        android:textColor="#F6F3F3"
        android:textColorHint="#F6F3F3"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutPassword" />

    <TextView
        android:id="@+id/goRegisterUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/goRegister"
        app:layout_constraintEnd_toEndOf="@+id/loginButton"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/goRegisterCorp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/goRegisterCorp"
        app:layout_constraintEnd_toEndOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/goRegisterUser" />

</androidx.constraintlayout.widget.ConstraintLayout>