<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    android:elevation="4dp"
    android:outlineProvider="none"
    tools:context=".authentication.MainActivity">

    <ImageView
        android:id="@+id/personLogin"
        android:layout_width="458dp"
        android:layout_height="315dp"
        android:layout_marginBottom="428dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/person4" />

    <LinearLayout
        android:id="@+id/loginDeck"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/personLogin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_margin="20dp"
            android:textSize="26dp"
            android:textStyle="bold"
            android:text="@string/uploadYourFiles">

        </TextView>

        <LinearLayout
            android:id="@+id/layoutAddResume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20dp"
            android:background="@drawable/redbox"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:weightSum="4"
            app:layout_constraintTop_toBottomOf="@+id/layoutConfirmPassword"
            android:layout_marginBottom="20dp"
            android:paddingBottom="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/myResume">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/resumeDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:maxLines="1"
                    android:minLines="1"
                    android:textColor="@color/white"
                    android:text="@string/resumeNotFound">
                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/uploadResume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="32dp"
                    android:paddingRight="22dp"
                    android:text="@string/uploadResumeRegister"
                    android:textColor="@color/primary_red"
                    android:stateListAnimator="@null"
                    android:textStyle="bold"
                    android:drawableEnd="@drawable/baseline_add_circle_24"
                    android:drawableTint="@color/primary_red"
                    android:drawablePadding="10dp"
                    android:textSize="13sp"
                    android:background="@drawable/navigation_bar">
                </Button>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAddCoverLetter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:paddingTop="20dp"
            android:background="@drawable/redbox"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            app:layout_constraintTop_toBottomOf="@+id/layoutAddResume"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:weightSum="4"
            android:paddingBottom="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/myCoverLetter">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/coverLetterDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:maxLines="1"
                    android:minLines="1"
                    android:textColor="@color/white"
                    android:text="@string/coverNotFound">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/uploadCoverLetter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="32dp"
                    android:paddingRight="22dp"
                    android:text="@string/uploadCoverRegister"
                    android:textColor="@color/primary_red"
                    android:stateListAnimator="@null"
                    android:textStyle="bold"
                    android:drawableEnd="@drawable/baseline_add_circle_24"
                    android:drawableTint="@color/primary_red"
                    android:drawablePadding="10dp"
                    android:textSize="13sp"
                    android:background="@drawable/navigation_bar">
                </Button>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/redbutton"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/fullNextBtn">

            </Button>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>